--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
     </h1>
 
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event)" class="space-y-6">
-      <div>
+      <div class="mt-5">
         <label class="block text-gray-700 mb-2">Correo electrónico</label>
         <input type="email" 
                formControlName="email"
@@ -22,7 +22,7 @@
         }
       </div>
 
-      <div>
+      <div class="mt-5">
         <label class="block text-gray-700 mb-2">Contraseña</label>
         <input type="password" 
                formControlName="password"
