--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -42,7 +42,7 @@
 
       <button type="submit" 
               [disabled]="loginForm.invalid || loading"
-              class="w-full bg-[#0043A9] text-white py-3 px-4 rounded-lg hover:bg-[#003788] transition-colors font-semibold flex items-center justify-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed">
+              class="w-full bg-[#0043A9] text-white py-3 px-4 mt-10 rounded-lg hover:bg-[#003788] transition-colors font-semibold flex items-center justify-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed">
         @if(!loading){
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"/>
