--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -38,7 +38,7 @@
                 Tareas Pendientes
                 <span class="text-sm font-normal text-gray-500">({{ pendingTasks.length }})</span>
             </h3>
-            <div class="space-y-3">
+            <div class="space-y-3 mt-10">
                 @for(task of pendingTasks; track task.id) {
                     <div class="group transition-all duration-200 hover:translate-x-1">
                         <ng-container *ngTemplateOutlet="taskCard; context: { $implicit: task }"></ng-container>
